--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Everything Technical
+description: Amazing technology
 github_username: kaushikdasroy
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "my_fastpages"
@@ -39,8 +39,8 @@ baseurl: "/my_fastpages" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    twitter: kaushikdasroy
+    github: kaushikdasroy
 
 # Set this to true to get LaTeX math equation support
 use_math: 
