--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,7 @@ github_repo: "my_fastpages"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
-#url: "https://kaushikdasroy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-url: "https://www.uplandr.com"
+url: "https://kaushikdasroy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
@@ -35,8 +34,7 @@ url: "https://www.uplandr.com"
 #
 # 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
 #
-#baseurl: "/my_fastpages" # the subpath of your site, e.g. "/blog".
-baseurl: "/blog"
+baseurl: "/my_fastpages" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
