--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ github_repo: "my_fastpages"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
-url: "https://kaushikdasroy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+#url: "https://kaushikdasroy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://blog.uplandr.com"
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
@@ -34,7 +35,8 @@ url: "https://kaushikdasroy.github.io" # the base hostname & protocol for your s
 #
 # 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
 #
-baseurl: "/my_fastpages" # the subpath of your site, e.g. "/blog".
+#baseurl: "/my_fastpages" # the subpath of your site, e.g. "/blog".
+baseurl: ""
 
 # Github and twitter are optional:
 minima:
