--- a/_config.yml
+++ b/_config.yml
@@ -73,9 +73,9 @@ include:
 
 # This specifies what badges are turned on by default for notebook posts.
 default_badges:
-  github: false
-  binder: false
-  colab: false
+  github: true
+  binder: true
+  colab: true
 
 # Escape HTML in post descriptions
 html_escape:
